# generic-infotainment-ui

./: CMakeLists.txt  GridOne.qml  GridTwo.qml  README.md  StackViewPage.qml  StationPage.qml  StatusBar.qml  main.qml  qml.qrc
